# advent2018

./: README.md  advent2018.cabal  stack.yaml
app/: Main.hs
src/: Advent1.hs  Advent10.hs  Advent11.hs  Advent12.hs  Advent13.hs  Advent14.hs  Advent15.hs  Advent16.hs  Advent17.hs  Advent18.hs  Advent19.hs  Advent2.hs  Advent20.hs  Advent21.hs  Advent22.hs  Advent23.hs  Advent24.hs  Advent3.hs  Advent4.hs  Advent5.hs  Advent6.hs  Advent7.hs  Advent8.hs  Advent9.hs  Lib.hs
